@@ -11,33 +11,46 @@ Doc: let \var{bnr} be the ray class group data output by
  to the modulus $f = \kbd{bnr.mod}$. Solves the discrete logarithm problem
  in the ray class group, with respect to the generators \kbd{bnr.gen},
  in a way similar to \tet{bnfisprincipal}. If $x$ is not coprime to the
- modulus of \var{bnr} the result is undefined.
+ modulus of \var{bnr} the result is undefined. Note that \var{bnr} need not
+ contain the ray class group generators, i.e.~it may be created with
+ \kbd{bnrinit}$(,,0)$; in that case, although \kbd{bnr.gen} is undefined, we
+ can still fix natural generators for the ray class group (in terms of the
+ generators in \kbd{bnr.bnf.gen} and \kbd{bnr.bid.gen}) and compute with
+ respect to them.
 
- If $\fl = 1$, returns a 2-component vector $v$ where $v[1]$ is the
+ If $\fl = 1$ (default), returns a 2-component vector $v$ where $v[1]$ is the
  vector of components of $x$ on the ray class group generators, $v[2]$ is
  an element $\alpha$ congruent to $1~\text{mod}^* f$ such that
  $x = \alpha \prod_i g_i^{x_i}$.
 
- If $\fl=0$, outputs only $v_1$. In that case, \var{bnr} need not contain the
- ray class group generators, i.e.~it may be created with
- \kbd{bnrinit}$(,,0)$; in that case, although \kbd{bnr.gen} is undefined, we
- can still define canonical generators attached to the \kbd{bnr} and compute
- with respect to them.
+ If $\fl=0$, outputs only $v_1$.
+
  \bprog
  ? K = bnfinit(x^2 - 30); bnr = bnrinit(K, [4, [1,1]]);
  ? bnr.clgp \\ ray class group is isomorphic to Z/4 x Z/2 x Z/2
  %2 = [16, [4, 2, 2]]
- ? P = idealprimedec(K, 3)[1]; \\ a prime ideal above 3
- ? bnrisprincipal(bnr,P) \\ bnr.gen is missing
-  ***   at top-level: bnrisprincipal(bnr,P)
-  ***                 ^---------------------
-  *** bnrisprincipal: missing bnr generators: please use bnrinit(,,1).)
- ? bnrisprincipal(bnr,P, 0) \\ omit principal part, no need for bnr.gen
+ ? P = idealprimedec(K, 3)[1]; \\ the ramified prime ideal above 3
+ ? bnrisprincipal(bnr,P) \\ bnr.gen undefined !
+ %5 = [[3, 0, 0]~, 9]
+ ? bnrisprincipal(bnr,P, 0) \\ omit principal part
  %5 = [3, 0, 0]~
- ? bnr = bnrinit(bnr, bnr.mod, 1); \\ include generators
- ? bnrisprincipal(bnr,P) \\ ... and now it works
- %7 = [[1, 1, 1]~, 1/128625]
- @eprog
+ ? bnr = bnrinit(bnr, bnr.bid, 1); \\ include explicit generators
+ ? bnrisprincipal(bnr,P) \\ ... alpha is different !
+ %7 = [[3, 0, 0]~, 1/128625]
+ @eprog It may be surprising that the generator $\alpha$ is different
+ although the underlying \var{bnf} and \var{bid} are the same. This defines
+ unique generators for the ray class group as ideal \emph{classes}, whether
+ we use \kbd{bnrinit(,0)} or \kbd{bnrinit,1}. But the actual ideal
+ representatives (implicit if the flag is $0$, computed and stored in the
+ \var{bnr} if the flag is $1) are in general different and this is what
+ happens here. Indeed, the implicit generators are naturally expressed
+ expressed in terms of \kbd{bnr.bnf.gen} and \kbd{bnr.bid.gen} and \emph{then}
+ expanded and simplified (in the same ideal class) so that we obtain ideal
+ representatives for \kbd{bnr.gen} which are as simple as possible.
+ And indeed the quotient of the two $\alpha$ found is $1$ modulo the
+ conductor (and positive at the infinite places it contains), and this is the
+ only guaranteed property.
+
  Beware that, when \kbd{bnr} is generated using \kbd{bnrinit(, cycmod)}, the
  results are given in $\text{Cl}_f$ modulo \kbd{cycmod}-th powers:
  \bprog
