@@ -137,5 +137,10 @@ setrand(1); bnr=bnrinit(bnfinit(y^4-y^3+16*y^2-16*y+61),5,,5);
 setrand(1); bnr=bnrinit(bnfinit(y^4+30*y^2+18),5);
 #bnrclassfield(bnr,5)
 
-\\ Errors
-bnrisprincipal(bnrinit(bnf, 1), 1);
+K=bnfinit(x^2-30); bnr=bnrinit(K,[4,[1,1]]);
+P=idealprimedec(K,3)[1];
+bnrisprincipal(bnr,P)
+bnrisprincipal(bnr,P,0)
+bnr = bnrinit(bnr,bnr.mod,1);
+bnrisprincipal(bnr,P)
+bnrisprincipal(bnr,P,0)
